k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickroll-deployment
  labels:
    app: rickroll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rickroll
  template:
    metadata:
      labels:
        app: rickroll
    spec:
      containers:
      - name: rickroll
        image: my-rickroll
        imagePullPolicy: Never
        ports:
        - containerPort: 80
