k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rickroll-service
spec:
  selector:
    app: rickroll
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
