k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rickroll-ingress
spec:
  rules:
  - host: k8s.russparmer.local
    http:
      paths:
      - path: /rickroll
        backend:
          serviceName: rickroll-service
          servicePort: 80
